Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "dashboard-lite.delvex.ga"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-app
            port:
              number: 80
